# my_app

./: .env.example  .gitignore  PLAN.md  README.md  push-and-deploy.cmd  pyproject.toml  requirements.txt
deploy/: server-update.sh
docs/: SERVER_RUNBOOK.md
scripts/: dev-bot.ps1  dev-start.ps1  dev-stop.ps1  push-and-update-server.ps1
src/tg_mini_app/: __init__.py  order_flow.py  paths.py  settings.py  telegram_keyboards.py
src/tg_mini_app.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tg_mini_app/api/: __init__.py  __main__.py  app.py  cart.py  customer_identity.py  deps.py  operator_panel.py  orders.py  schemas.py  telegram_webapp.py
src/tg_mini_app/bot/: __init__.py  __main__.py  db.py
src/tg_mini_app/db/: __init__.py  models.py  seed.py  session.py
src/tg_mini_app/static/: app.js  app_v2.js  app_v3.js  styles.css
src/tg_mini_app/templates/: base.html  operator_panel.html  operator_panel_login.html  webapp.html
tests/: test_operator_panel_cookie.py  test_order_flow.py  test_orders_resolve.py  test_telegram_webapp.py
